# sggw_advanced_python

./: .gitignore  README.md  main.py  pyproject.toml
data/: Sales_List_03042024 (12).csv  Sales_List_03052025 (24).csv  Sales_List_04032025 (11).csv  Sales_List_07092024 (35).csv  Sales_List_09032025 (17).csv  Sales_List_09032025 (20).csv  Sales_List_10082024 (20).csv  Sales_List_10102025 (12).csv  Sales_List_10102025 (16).csv  Sales_List_10312025 (11).csv  Sales_List_10312025 (4).csv  Sales_List_12012025 (11).csv  Sales_List_12012025 (22).csv  Sales_List_12012025 (3).csv  Sales_List_12092025 (16).csv  Sales_List_12092025 (3).csv
models/: auction.py  enums.py  vehicle.py
processors/: auction_processor.py
services/: csv_loader.py  parsers.py  row_mapper.py
tests/: test_parsers.py  test_row_mapper.py
